--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,10 +1,19 @@
 // Colors
 $off-black: #20222b;
 $off-white: #a5afd7;
-$light-blue: #464b5e;
-$blue: #3c4251;
+$light-blue: #6699cc;
+$blue: #006699;
 $dark-blue: #333745;
 $purple: #8357c5;
+
+$dark-grey: #333333;
+$off-gray: #666666;
+$grey: #888888;
+$light-grey: #f7f7f7f3;
+
+// Font Size
+$font-size-large: 1.8rem;
+$font-size-small: 1.4rem;
 
 // Size
 $xs-size: 0.8rem;
@@ -12,4 +21,4 @@ $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
-$desktop-breakpoint:45rem;
+$desktop-breakpoint: 45rem;
